# newspaper

./: Cargo.toml  README.md  shell.nix
src/: config.rs  main.rs  rss.rs  typst.rs
src/templates/: newspaper.typ
