[package]
name = "newspaper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
reqwest = "0.12.23"
rss = { version = "2.0.12", features = ["atom"] }
rss-gen = "0.0.3"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
